# Bankrate

./: .gitignore  README.md  comparison_df.xlsx  julietta_zhu_RV_deck.pptx  julietta_zhu_RV_newdata.xlsx  julietta_zhu_code.html  pyproject.toml  requirements.txt  ~$comparison_df.xlsx
data/: comparison_df.xlsx
notebooks/: analysis.ipynb
